--- a/core/build.gradle
+++ b/core/build.gradle
@@ -31,22 +31,25 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    implementation 'org.greenrobot:eventbus:3.0.0'
     //Loader依赖
-    implementation 'com.wang.avi:library:2.1.3'
-    //网络请求依赖
-    implementation 'com.squareup.okio:okio:1.13.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
-
-    implementation 'com.blankj:utilcode:1.19.0'
-
     implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.alibaba:fastjson:1.2.12'
 
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+    api 'com.android.support:support-v4:28.0.0'
+    api 'com.android.support:recyclerview-v7:28.0.0'
+
+    api 'org.greenrobot:eventbus:3.0.0'
+
+    api 'com.wang.avi:library:2.1.3'
+    //网络请求依赖
+    api 'com.squareup.okio:okio:1.13.0'
+    api 'com.squareup.okhttp3:okhttp:3.8.1'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.3.0'
+
+    api 'com.blankj:utilcode:1.19.0'
+
+    api 'com.android.support:design:28.0.0'
+    api 'com.alibaba:fastjson:1.2.12'
+
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
