--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
     package="com.alliky.core" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:label="@string/app_name"
         android:supportsRtl="true">
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="com.alliky.core.entity.MyFileProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
